[package]
name = "wabbarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
env_logger = "0.10.2"
futures-util = "0.3.30"
indicatif = "0.17.7"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["stream", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.5.0"
terminal_size = "0.3.0"
tokio = { version = "1.35.1", features = ["full"] }
